--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,12 @@
 :root {
+	margin: 0 auto;
+}
+
+body {
+	box-sizing: border-box;
+}
+
+/* :root {
 	color: rgb(255 255 255 / 87%);
 	font-weight: 400;
 	font-size: 16px;
@@ -72,3 +80,4 @@ button:focus-visible {
 		background-color: #f9f9f9;
 	}
 }
+ */
