--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -6,7 +6,9 @@
 }
 
 .header {
-	max-width: 1920px;
+	display: flex;
+	justify-content: center;
+	width: 1920px;
 	margin: 40px 40px 0;
 	background-color: rgb(28 28 33 / 100%);
 	border: 2px solid rgb(76 76 255 / 100%);
@@ -14,9 +16,10 @@
 
 .nav {
 	display: flex;
-	justify-content: space-around;
-	max-width: 1280px;
+	justify-content: space-evenly;
+	max-width: 1920px;
 	padding: 16px 0;
+	column-gap: 151px;
 	background-color: inherit;
 }
 
@@ -101,4 +104,8 @@
 	display: flex;
 	flex-direction: row;
 	column-gap: 8px;
+}
+
+.wrapperLogo {
+	margin-right: 163px;
 }
