feat: implement modal burger-ingredient

--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -32,6 +32,9 @@
 }
 
 .wrapper {
+	overflow: auto;
+  /* scrollbar-width: thin;
+  scrollbar-color: hsl(0 0% 50%); */
 	height: 756px;
-	overflow-y: auto;
+
 }
