--- a/src/components/modal-order/modal-order.module.css
+++ b/src/components/modal-order/modal-order.module.css
@@ -14,8 +14,6 @@
 	background-color: rgb(0 0 0 / 70%);
 }
 
-
-
 .modalContent {
 	position: relative;
 	display: flex;
@@ -51,7 +49,7 @@
 	color: rgb(242 242 243 / 100%);
 	font-weight: 700;
 	font-size: 36px;
-	font-family: 'JetBrainsMono', "Arial", "Helvetica", sans-serif;
+	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
 
 	/* line-height: 40px; */
 	letter-spacing: 0%;
@@ -63,12 +61,11 @@
 .nameProduct {
 	font-weight: 700;
 	font-size: 24px;
-	font-family: 'JetBrainsMono', "Arial", "Helvetica", sans-serif;
+	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
 
 	/* line-height: 30px; */
 	letter-spacing: 0%;
 }
-
 
 .descriptionWrapper {
 	display: flex;
@@ -89,7 +86,7 @@
 	flex-direction: column;
 	font-weight: 400;
 	font-size: 16px;
-	font-family: 'JetBrainsMono', "Arial", "Helvetica", sans-serif;
+	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
 
 	/* line-height: 24px; */
 	letter-spacing: 0;
@@ -99,8 +96,17 @@
 	font-size: 28px;
 }
 
+.identityOrder {
+	font-weight: 700;
+	font-size: 24px;
+	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
+	letter-spacing: 0%;
+}
 
+#number {
+	margin: 120px 0 0;
+}
 
-
-
-
+#info {
+	margin: 0 0 120px;
+}
