--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -50,18 +50,27 @@
 }
 
 .orderFeed {
+	/* composes: builder; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-sizing: border-box;
 	max-width: 197px;
-	composes: builder;
+	padding: 0 0 0 20px;
+	column-gap: 8px;
+	border-radius: 40px;
 }
 
 .orderFeedText {
-	composes: builderText;
+	/* composes: buildertext; */
+	display: flex;
+	flex-wrap: wrap;
+	align-content: center;
 	width: 125px;
 	height: 24px;
 }
 
 .orderFeedText span {
-
 	color: rgb(133 133 173 / 100%);
 	font-weight: 400;
 	font-size: 16px;
@@ -70,9 +79,15 @@
 }
 
 .personalAccount {
-	composes: builder;
+	/* composes: builder; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-sizing: border-box;
 	max-width: 207px;
-
+	padding: 0 0 0 20px;
+	column-gap: 8px;
+	border-radius: 40px;
 }
 
 .personalAccountText {
