--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -14,6 +14,19 @@
 	background-color: rgb(0 0 0 / 70%);
 }
 
+.modal {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	z-index: 1001;
+	width: 720px;
+	background-color: rgb(28 28 33 / 100%);
+	border: 1px rgb(76 76 255 / 20%);
+	border-radius: 40px;
+	box-shadow: rgb(26 24 24 / 4%);
+	transform: translate(-50%, -50%);
+}
+
 .modalContent {
 	position: relative;
 	display: flex;
@@ -21,19 +34,14 @@
 	justify-content: center;
 	align-items: center;
 	row-gap: 20px;
-	width: 720px;
-	background-color: rgb(28 28 33 / 100%);
-	border: 1px rgb(76 76 255 / 20%);
-	border-radius: 40px;
-	box-shadow: rgb(26 24 24 / 4%);
 }
 
 .modalClose {
 	position: absolute;
-	top: 10px;
-	right: 10px;
+	top: 40px;
+	right: 31px;
 	color: white;
-	font-size: 60px;
+	font-size: 50px;
 	background: none;
 	border: none;
 	cursor: pointer;
