--- a/src/components/burger-ingredients/ingredient-component/ingredient-components.module.css
+++ b/src/components/burger-ingredients/ingredient-component/ingredient-components.module.css
@@ -18,6 +18,14 @@
 	cursor: pointer;
 }
 
+.typeWrapper {
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 .price {
 	display: flex;
 	align-items: center;
