--- a/src/components/burger-constructor/builder.module.css
+++ b/src/components/burger-constructor/builder.module.css
@@ -1,9 +1,79 @@
-.testField {
-	width: 300px;
-	height: 100px;
-	background-color: wheat;
-	color: black;
-	font-size: 24px;
-	font-weight: 700;
+.emptyBunTop {
+	background: var(--background-element);
+    border-radius: var(--top-constructor-item-border-radius);
+    box-sizing: border-box;
+    color: #f2f2f3;
+    display: inline-block;
+    flex-grow: 1;
+    font-family: Jet Brains Mono;
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 536px;
+    min-height: 80px;
+    padding: 28px 178px;
+    width: 100%;
 }
 
+.emptyBunBottom {
+	background: var(--background-element);
+    border-radius: var(--bottom-constructor-item-border-radius);
+    box-sizing: border-box;
+    color: #f2f2f3;
+    display: inline-block;
+    flex-grow: 1;
+    font-family: Jet Brains Mono;
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 536px;
+    min-height: 80px;
+    padding: 28px 178px;
+    width: 100%;
+}
+
+.emptyMiddle {
+	background: var(--background-element);
+    border-radius: var(--common-border-radius-s);
+    box-sizing: border-box;
+    color: #f2f2f3;
+    display: inline-block;
+    flex-grow: 1;
+    font-family: Jet Brains Mono;
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 536px;
+    min-height: 80px;
+    padding: 28px 178px;
+    width: 100%;
+}
+
+.container {
+	margin: 100px 0px 0px 0px;
+	display: flex;
+	flex-direction: column;
+	row-gap: 17px;
+}
+
+.itemContainer {
+	display: flex;
+	flex-direction: column;
+	row-gap: 17px;
+}
+
+.item {
+	position: relative;
+}
+
+.item::before {
+	content: url("../../svg//Vector.svg");
+	position: absolute;
+	right: 100%;
+	top: 41%;
+	width: 24px;
+	height: 24px;
+}
+
+.wrapperItemIngredient {
+	display: flex;
+    align-items: center;
+    column-gap: 8px;
+}
