--- a/src/components/burger-constructor/builder.module.css
+++ b/src/components/burger-constructor/builder.module.css
@@ -57,6 +57,8 @@
 	display: flex;
 	flex-direction: column;
 	row-gap: 17px;
+	/* scroll-behavior: smooth;
+	overflow-y: scroll; !ОСтался скролл! */
 }
 
 .item {
