--- a/src/components/burger-constructor/builder.module.css
+++ b/src/components/burger-constructor/builder.module.css
@@ -79,3 +79,9 @@
     align-items: center;
     column-gap: 8px;
 }
+
+.burgerConstructorField {
+	display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
