--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -22,7 +22,7 @@
 }
 
 .headline {
-	color: rgb(242 242 243 / 100%);
+	color: rgba(242, 242, 243, 1);
 	font-weight: 700;
 	font-size: 24px;
 	font-family: 'JetBrainsMono', sans-serif, 'Arial';
