--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -16,8 +16,6 @@
 	font-weight: 700;
 	font-size: 36px;
 	font-family: 'JetBrainsMono', sans-serif, 'Arial';
-
-	/* line-height: 40px; */
 	letter-spacing: 0%;
 }
 
@@ -26,14 +24,10 @@
 	font-weight: 700;
 	font-size: 24px;
 	font-family: 'JetBrainsMono', sans-serif, 'Arial';
-
-	/* line-height: 30px; */
 	letter-spacing: 0%;
 }
 
 .wrapper {
-	/* scrollbar-width: thin;
-  scrollbar-color: hsl(0 0% 50%); */
 	height: 756px;
 	overflow: auto;
 }
@@ -48,8 +42,6 @@
 	flex-flow: row wrap;
 	justify-content: center;
 	column-gap: 24px;
-
-	/* overflow-y: auto;  */
 }
 
 
@@ -74,8 +66,6 @@
 	font-weight: 400;
 	font-size: 16px;
 	font-family: 'JetBrainsMono', 'Arial', sans-serif;
-
-	/* line-height: 24px; */
 	letter-spacing: 0%;
 	text-align: center;
 }
@@ -84,4 +74,73 @@
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
+}
+
+.done {
+	width: 48px;
+	height: 48px;
+}
+
+
+.tableTitle {
+	width: 640px;
+	color: rgb(242 242 243 / 100%);
+	font-weight: 700;
+	font-size: 36px;
+	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
+	letter-spacing: 0%;
+	text-align: start;
+	/* margin: 40px 40px 0px 40px; */
+}
+
+.nameProduct {
+	font-weight: 700;
+	font-size: 24px;
+	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
+	letter-spacing: 0%;
+}
+
+.descriptionWrapper {
+	display: flex;
+	flex-direction: row;
+	column-gap: 20px;
+}
+
+.tab {
+	display: flex;
+	flex-direction: row;
+	margin: 0 0 60px;
+	color: rgb(133 133 173 / 100%);
+	column-gap: 20px;
+}
+
+.tab td {
+	display: flex;
+	flex-direction: column;
+	font-weight: 400;
+	font-size: 16px;
+	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
+	letter-spacing: 0;
+}
+
+tr {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.identityOrder {
+	font-weight: 700;
+	font-size: 24px;
+	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
+	letter-spacing: 0%;
+}
+
+#number {
+	margin: 120px 0 0;
+}
+
+#info {
+	margin: 0 0 120px;
 }
