--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -89,18 +89,16 @@
 	column-gap: 20px;
 }
 
-.tab th {
+.tab tr {
 	display: flex;
 	flex-direction: column;
 	font-weight: 400;
 	font-size: 16px;
 	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
-
-	/* line-height: 24px; */
 	letter-spacing: 0;
 }
 
-.tab tr {
+.tab td {
 	font-size: 28px;
 }
 
