--- a/src/components/order/order.module.css
+++ b/src/components/order/order.module.css
@@ -1,3 +1,9 @@
+@font-face {
+	font-family: 'JetBrainsMono';
+	font-style: normal;
+	src: url('../../fonts/jet-brains/JetBrainsMono-VariableFont_wght.ttf');
+}
+
 .orderField {
 	display: flex;
 	flex-direction: row;
@@ -20,4 +26,28 @@
 .done {
 	width: 48px;
 	height: 48px;
+}
+
+.idOrder {
+	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
+	font-weight: 700;
+	font-size: 24px;
+}
+
+.wrapperOrder {
+	margin: 120px 100px 120px 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap:30px;
+}
+
+.reportInfo {
+	color: var(--text-inactive-color);
+	font-family: Jet Brains Mono;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.25;
+	margin: 0;
+    padding: 0;
 }
