--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -11,8 +11,6 @@
 	width: 1920px;
 	margin: 40px 40px 0;
 	background-color: rgb(28 28 33 / 100%);
-
-	/* border: 2px solid rgb(76 76 255 / 100%); */
 }
 
 .nav {
@@ -97,6 +95,7 @@
 	font-size: 16px;
 	font-family: 'JetBrainsMono', 'Arial', sans-serif;
 	letter-spacing: 0%;
+	cursor: pointer;
 }
 
 .wrapper {
