feat: implement store with necessary management tools

--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -64,6 +64,13 @@
 	row-gap: 24px;
 }
 
+.form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 24px
+}
+
 .auxFields {
 	display: flex;
 	flex-direction: column;
