--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -62,6 +62,12 @@
 	flex-direction: column;
 	align-items: center;
 	row-gap: 24px;
+	position: relative;
+}
+
+.button {
+	position: absolute;
+	bottom: 0px;
 }
 
 .form {
