--- a/src/components/spinner/spinner.module.css
+++ b/src/components/spinner/spinner.module.css
@@ -1,10 +1,11 @@
 .spinner {
 	display: inline-block;
-	width: 50px;
-	height: 50px;
+	margin: 100px 0px 0px 0px;
+	width: 150px;
+	height: 150px;
 	border: 5px solid rgba(0, 0, 0, 0.1);
 	border-radius: 50%;
-	border-top-color: #3498db;
+	border-top-color: #4c9ed4;
 	animation: spin 1s ease-in-out infinite;
   }
 
