--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -44,6 +44,13 @@
 	column-gap: 24px;
 }
 
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	/* margin: 120px 0px 0px 0px; */
+}
+
 
 .ingredientItem {
 	position: relative;
