feat: implement private feed without refreshToken

--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -177,14 +177,6 @@ tr {
 	margin: 0 0 120px;
 }
 
-.orderFeed {
-	margin: 200px 0px 0px 0px;
-	font-weight: 700;
-	font-size: 50px;
-	font-family: 'JetBrainsMono', 'Arial', 'Helvetica', sans-serif;
-	letter-spacing: 0%;
-}
-
 .nonFound {
 	margin: 200px 0px 0px 0px;
 	font-weight: 700;
@@ -428,4 +420,12 @@ tr {
 
 .subField {
 	composes: orderTitle;
+}
+
+/* orderHistory */
+
+.orderFeed {
+	width: 644px;
+	height: 700px;
+	overflow: auto;
 }
