feat: add indent for feed-order item

--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -12,7 +12,7 @@
 }
 
 .container {
-	margin: 180px 0px 0px 0px;
+	/* margin: 180px 0px 0px 0px; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -29,6 +29,7 @@
 	display: flex;
 	flex-direction: column;
 	row-gap: 20px;
+	margin: 180px 0px 0px 0px;
 }
 
 
@@ -58,6 +59,7 @@
 }
 
 .wrapper {
+	margin: 180px 0px 0px 0px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -222,8 +224,9 @@ tr {
 	background-color: rgba(28, 28, 33, 1);
 	row-gap: 24px;
 	border-radius: 40px;
-	border: 2px dotted white;
 	padding: 24px;
+	margin: 0px 8px 0px 0px;
+
 }
 
 .orderTitle {
@@ -425,7 +428,11 @@ tr {
 /* orderHistory */
 
 .orderFeed {
+	margin: 40px 0px 0px 0px;
 	width: 644px;
 	height: 700px;
 	overflow: auto;
+	display: flex;
+    flex-direction: column;
+    row-gap: 24px;
 }
